--- a/.project
+++ b/.project
@@ -1,13 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>hammal</name>
+	<name>hammal</name>
   <buildSpec>
     <buildCommand>
       <name>org.scala-ide.sdt.core.scalabuilder</name>
     </buildCommand>
+	<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments>
+			</arguments>
+	</buildCommand>
   </buildSpec>
   <natures>
     <nature>org.scala-ide.sdt.core.scalanature</nature>
     <nature>org.eclipse.jdt.core.javanature</nature>
+	<nature>org.eclipse.m2e.core.maven2Nature</nature>
   </natures>
   <linkedResources> </linkedResources>
 </projectDescription>
