--- a/src/main/resources/mysql.conf
+++ b/src/main/resources/mysql.conf
@@ -1,4 +1,4 @@
 db.driver=com.mysql.jdbc.Driver
-db.url="""jdbc:mysql://localhost:3306/test1"""
+db.url="""jdbc:mysql://localhost:3306/test"""
 db.username=root
-db.password=123456
+db.password=root
